--- a/index.html
+++ b/index.html
@@ -7,31 +7,29 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <div class="content-wrapper">
-            <div class="emoji-section">
-                <div class="emoji-selector">
-                    <!-- Zone pour les emojis sélectionnés -->
+    <div class="app-container">
+        <div class="smiley-generator">
+            <div class="emoji-panel">
+                <div class="emoji-display">
                     <div id="selected-emojis"></div>
                 </div>
-                <button id="clear-btn" class="clear-button">🗑️ Vider</button>
+                <button id="clear-btn" class="clear-button">🗑️</button>
             </div>
-            
-            <div class="main-display">
+
+            <div class="smiley-display">
                 <div id="image-stack">
-                    <!-- Les images seront superposées ici -->
                     <img id="origin" src="images/origine.png" alt="Image de base du smiley">
                     <img id="elaborate-layer" class="overlay" src="" alt="Couche élaborée" style="display: none;">
                     <img id="funny-layer" class="overlay" src="" alt="Couche amusante" style="display: none;">
                     <img id="spicy-layer" class="overlay" src="" alt="Couche épicée" style="display: none;">
                 </div>
             </div>
-        </div>
 
-        <div class="controls">
-            <button id="elaborate-btn">Elaborate 🎨</button>
-            <button id="funny-btn">Funny 😄</button>
-            <button id="spicy-btn">Spicy 🌶️</button>
+            <div class="controls-panel">
+                <button id="elaborate-btn" class="control-btn">Elaborate 🎨</button>
+                <button id="funny-btn" class="control-btn">Funny 😄</button>
+                <button id="spicy-btn" class="control-btn">Spicy 🌶️</button>
+            </div>
         </div>
     </div>
     <script src="script.js"></script>
