Ajout de la sélection de taille et réorganisation des contrôles

--- a/index.html
+++ b/index.html
@@ -18,14 +18,17 @@
                 </div>
                 <div class="emoji-overlay">
                     <div id="selected-emojis"></div>
-                    <button id="clear-btn" class="clear-button">🗑️</button>
+                    <button id="clear-btn" class="clear-button" title="Clear emojis">🗑️</button>
                 </div>
             </div>
 
             <div class="controls-panel">
-                <button id="elaborate-btn" class="control-btn">Elaborate 🎨</button>
-                <button id="funny-btn" class="control-btn">Funny 😄</button>
-                <button id="spicy-btn" class="control-btn">Spicy 🌶️</button>
+                <div class="controls-grid">
+                    <button id="elaborate-btn" class="control-btn">Elaborate 🎨</button>
+                    <button id="funny-btn" class="control-btn">Funny 😄</button>
+                    <button id="spicy-btn" class="control-btn">Spicy 🌶️</button>
+                    <button id="size-btn" class="control-btn size-btn">Size: Medium ☕</button>
+                </div>
             </div>
         </div>
     </div>
