--- a/index.html
+++ b/index.html
@@ -10,15 +10,17 @@
     <div class="app-container">
         <div class="smiley-generator">
             <div class="smiley-display">
-                <div id="image-stack">
-                    <img id="origin" src="images/origine.png" alt="Image de base du smiley">
-                    <img id="elaborate-layer" class="overlay" src="" alt="Couche élaborée" style="display: none;">
-                    <img id="funny-layer" class="overlay" src="" alt="Couche amusante" style="display: none;">
-                    <img id="spicy-layer" class="overlay" src="" alt="Couche épicée" style="display: none;">
-                </div>
-                <div class="emoji-overlay">
-                    <div id="selected-emojis"></div>
-                    <button id="clear-btn" class="clear-button" title="Clear emojis">🗑️</button>
+                <div class="smiley-frame">
+                    <div id="image-stack">
+                        <img id="origin" src="images/origine.png" alt="Image de base du smiley">
+                        <img id="elaborate-layer" class="overlay" src="" alt="Couche élaborée" style="display: none;">
+                        <img id="funny-layer" class="overlay" src="" alt="Couche amusante" style="display: none;">
+                        <img id="spicy-layer" class="overlay" src="" alt="Couche épicée" style="display: none;">
+                    </div>
+                    <div class="emoji-overlay">
+                        <div id="selected-emojis"></div>
+                        <button id="clear-btn" class="clear-button" title="Clear emojis">🗑️</button>
+                    </div>
                 </div>
             </div>
 
