Correction de l'emoji initial et ajustement des tailles

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <button id="elaborate-btn" class="control-btn">Elaborate 🎨</button>
                     <button id="funny-btn" class="control-btn">Funny 😄</button>
                     <button id="spicy-btn" class="control-btn">Spicy 🌶️</button>
-                    <button id="size-btn" class="control-btn size-btn">Size: Medium ☕</button>
+                    <button id="size-btn" class="control-btn size-btn">Size: M 📐</button>
                 </div>
             </div>
         </div>
