--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 
             <div class="controls-panel">
                 <div class="controls-grid">
-                    <button id="elaborate-btn" class="control-btn">Elaborate 🎨</button>
-                    <button id="funny-btn" class="control-btn">Funny 😄</button>
-                    <button id="spicy-btn" class="control-btn">Spicy 🌶️</button>
-                    <button id="size-btn" class="control-btn size-btn">Size: M 📐</button>
+                    <button id="elaborate-btn" class="control-btn">Elaborate <span>⚙️</span></button>
+                    <button id="funny-btn" class="control-btn">Funny <span>😄</span></button>
+                    <button id="spicy-btn" class="control-btn">Spicy <span>🌶️</span></button>
+                    <button id="size-btn" class="control-btn size-btn">Size: M <span>📐</span></button>
                 </div>
             </div>
         </div>
